# Deep_Learning_Webapp_University_Project

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  main.py  requirements.txt  run.bat  setup.cfg
backend/: __init__.py  model_factory.py
backend/helpers/: __init__.py  export_labels.py  label_img.py  parse_label_name_to_folder.py  reverse_label_img.py
backend/helpers/cnn_helpers/: al_strategies.py  cnn_net_arch_visualizer.py  cnn_net_weight_matrix_vis.py  cnn_performance_eval.py  cnn_saliency_maps.py  create_tensor_predict.py  create_train_set.py  create_train_val_ds.py  finetune_compile.py  finetune_train.py  predict_labels.py
backend/learners/ClassicMLActiveLearning/: active_learning_classifier.py  predict_with_classic_ml.py  retrain_model_classic_ml.py
backend/learners/xception/: xception.ipynb
backend/pre_processing/: __init__.py  feat_selection.py  tf_datasplit_benchmarking.py
backend/pre_processing/feature_extraction/: radiomics_features.py
backend/validation/: cnn_validation_bench.ipynb
frontend/: utils.py
frontend/static/css/: info-button.css  label.css  loading-spinner.css  main.css  popup_window.css  prediction_results.css
frontend/templates/: label-upload.html  prediction-upload.html  prediction_results.html  retrained.html  shop.html
frontend/templates/layouts/: get-size.html
tests/: __init__.py  test_backend.py
