[options]
package_dir=
    =tests
packages=find:

[options.packages.find]
where=tests


[mypy]
ignore_missing_imports = True

[pylint.format]
max-line-length=110
[pylint.master]
extension-pkg-whitelist=cv2
generated-members=ocr.*


[tool:pytest]
addopts =
  -v
  --pylint
  --cov=tests
  --cov=backend
  --cov=frontend
  --cov-branch
  --cov-report=html
  --cov-report=term
  --no-cov-on-fail
  --junitxml=report.xml

junit_family=xunit2
